xong Kiem tra sim va phan trang

--- a/SBAdmin/SBAdmin.csproj
+++ b/SBAdmin/SBAdmin.csproj
@@ -213,11 +213,12 @@
     <Compile Include="Models\App\AppDbContext.cs" />
     <Compile Include="Models\App\NetWork.cs" />
     <Compile Include="Models\App\Order.cs" />
-    <Compile Include="Models\App\Repository\GenericRepository.cs" />
-    <Compile Include="Models\App\Repository\NetworkRepo.cs" />
-    <Compile Include="Models\App\Repository\OrderRepository.cs" />
-    <Compile Include="Models\App\Repository\SIMRepository.cs" />
-    <Compile Include="Models\App\Repository\SimTypeRepo.cs" />
+    <Compile Include="Models\App\ViewModels\ListSimViewModel.cs" />
+    <Compile Include="Repository\GenericRepository.cs" />
+    <Compile Include="Repository\NetworkRepo.cs" />
+    <Compile Include="Repository\OrderRepository.cs" />
+    <Compile Include="Repository\SIMRepository.cs" />
+    <Compile Include="Repository\SimTypeRepo.cs" />
     <Compile Include="Models\App\SIM.cs" />
     <Compile Include="Models\App\SimType.cs" />
     <Compile Include="Models\App\Supplier.cs" />
@@ -245,40 +246,39 @@
     <Content Include="SBAdmin\app\components\waitingDialog\dialog.html" />
     <Content Include="SBAdmin\app\components\waitingDialog\waitingDialog.js" />
     <Content Include="SBAdmin\app\controllers\appCtrl.js" />
-    <Content Include="SBAdmin\app\controllers\menu\networkCtrl.js" />
-    <Content Include="SBAdmin\app\controllers\menu\orderCtrl.js" />
-    <Content Include="SBAdmin\app\controllers\menu\simCtrl.js" />
-    <Content Include="SBAdmin\app\controllers\menu\simtypeCtrl.js" />
-    <Content Include="SBAdmin\app\controllers\menu\supplierCtrl.js" />
+    <Content Include="SBAdmin\app\controllers\manage\networkCtrl.js" />
+    <Content Include="SBAdmin\app\controllers\working\orderCtrl.js" />
+    <Content Include="SBAdmin\app\controllers\working\simCtrl.js" />
+    <Content Include="SBAdmin\app\controllers\manage\simtypeCtrl.js" />
+    <Content Include="SBAdmin\app\controllers\manage\supplierCtrl.js" />
     <Content Include="SBAdmin\app\customServices\authenticate.js" />
     <Content Include="SBAdmin\app\customServices\crud.js" />
     <Content Include="SBAdmin\app\controllers\authenticateCtrl.js" />
-    <Content Include="SBAdmin\app\controllers\manageUsersCtrl.js" />
+    <Content Include="SBAdmin\app\controllers\manage\userCtrl.js" />
     <Content Include="SBAdmin\app\modules\appRun.js" />
     <Content Include="SBAdmin\app\modules\sbAdmin.js" />
-    <Content Include="SBAdmin\app\views\authentication\authentication.html" />
     <Content Include="SBAdmin\app\ngmodules\angular-resource.js" />
     <Content Include="SBAdmin\app\ngmodules\angular-route.js" />
-    <Content Include="SBAdmin\app\views\manageUser\create.html" />
-    <Content Include="SBAdmin\app\views\manageUser\index.html" />
-    <Content Include="SBAdmin\app\views\manageUser\update.html" />
-    <Content Include="SBAdmin\app\views\menu\network\create.html" />
-    <Content Include="SBAdmin\app\views\menu\network\index.html" />
-    <Content Include="SBAdmin\app\views\menu\network\update.html" />
-    <Content Include="SBAdmin\app\views\menu\order\create.html" />
-    <Content Include="SBAdmin\app\views\menu\order\index.html" />
-    <Content Include="SBAdmin\app\views\menu\order\update.html" />
-    <Content Include="SBAdmin\app\views\menu\simtype\create.html" />
-    <Content Include="SBAdmin\app\views\menu\simtype\index.html" />
-    <Content Include="SBAdmin\app\views\menu\simtype\update.html" />
-    <Content Include="SBAdmin\app\views\menu\sim\create.html" />
-    <Content Include="SBAdmin\app\views\menu\sim\import.html" />
-    <Content Include="SBAdmin\app\views\menu\sim\index.html" />
-    <Content Include="SBAdmin\app\views\menu\sim\update.html" />
-    <Content Include="SBAdmin\app\views\menu\supplier\create.html" />
-    <Content Include="SBAdmin\app\views\menu\supplier\index.html" />
-    <Content Include="SBAdmin\app\views\menu\supplier\update.html" />
-    <Content Include="SBAdmin\app\views\authentication\signIn.html" />
+    <Content Include="SBAdmin\app\views\manage\employee\create.html" />
+    <Content Include="SBAdmin\app\views\manage\employee\index.html" />
+    <Content Include="SBAdmin\app\views\manage\employee\update.html" />
+    <Content Include="SBAdmin\app\views\manage\network\create.html" />
+    <Content Include="SBAdmin\app\views\manage\network\index.html" />
+    <Content Include="SBAdmin\app\views\manage\network\update.html" />
+    <Content Include="SBAdmin\app\views\working\order\create.html" />
+    <Content Include="SBAdmin\app\views\working\order\index.html" />
+    <Content Include="SBAdmin\app\views\working\order\update.html" />
+    <Content Include="SBAdmin\app\views\manage\simtype\create.html" />
+    <Content Include="SBAdmin\app\views\manage\simtype\index.html" />
+    <Content Include="SBAdmin\app\views\manage\simtype\update.html" />
+    <Content Include="SBAdmin\app\views\working\sim\check.html" />
+    <Content Include="SBAdmin\app\views\working\sim\create.html" />
+    <Content Include="SBAdmin\app\views\working\sim\import.html" />
+    <Content Include="SBAdmin\app\views\working\sim\index.html" />
+    <Content Include="SBAdmin\app\views\working\sim\update.html" />
+    <Content Include="SBAdmin\app\views\manage\supplier\create.html" />
+    <Content Include="SBAdmin\app\views\manage\supplier\index.html" />
+    <Content Include="SBAdmin\app\views\manage\supplier\update.html" />
     <Content Include="SBAdmin\app\views\page-wrapper\dashboard.html" />
     <Content Include="SBAdmin\bower_components\bootstrap-social\.gitignore" />
     <Content Include="SBAdmin\bower_components\bootstrap-social\bootstrap-social.css" />
